@@ -52,9 +52,9 @@ gctags|tag command for GLOBAL:\
 	:suffixes=c,h,y,c++,cc,cpp,cxx,hxx,C,H,s,S,java:\
 	:sort_command=sort:\
 	:sed_command=sed:\
-	:GTAGS=gctags %s:\
-	:GRTAGS=gctags -r %s:\
-	:GSYMS=gctags -s %s:
+	:GTAGS=gctags -d %s:\
+	:GRTAGS=gctags -dr %s:\
+	:GSYMS=gctags -ds %s:
 #
 # [Emacs's ctags]
 #
